--- a/block/render.php.mustache
+++ b/block/render.php.mustache
@@ -1,5 +1,6 @@
 {{#isDynamicVariant}}
-<p <?php echo get_block_wrapper_attributes(); ?>>
- <?php esc_html_e( '{{title}} – hello from a dynamic block!', '{{textdomain}}' ); ?>
-</p>
+<div <?php echo get_block_wrapper_attributes(); ?>>
+	<h4>{{title}}</h4>
+	<p><?php the_field( '{{namespaceSnakeCase}}_{{slugSnakeCase}}_text_field' ); ?></p>
+</div>
 {{/isDynamicVariant}}
